# bio-normalizers

./: .bazelrc  .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  WORKSPACE  setup.py
bionorm/common/SieveBased/: BUILD.bazel  README.md  normalizer.py
bionorm/common/SieveBased/config/: __init__.py
bionorm/common/SieveBased/data/: BUILD.bazel  affix.txt  ncbi-spell-check.txt  prepositions.txt  stopwords.txt
bionorm/common/SieveBased/models/: BUILD.bazel  entities.py
bionorm/common/SieveBased/processing/: BUILD.bazel  terminology.py
bionorm/common/SieveBased/processing/sieves/: BUILD.bazel  __init__.py  affixation_sieve.py  base_sieve.py  entity_modifier_synonyms_sieve.py  hyphenation_sieve.py  partial_match_ncbi_sieve.py  prepositional_transform_sieve.py  sieve.py  simple_name_sieve.py  stemming_sieve.py  symbol_replacement_sieve.py
bionorm/common/SieveBased/util/: BUILD.bazel  text_processor.py
bionorm/common/SieveBased/util/tests/: BUILD.bazel  test_text_processor.py
bionorm/common/data/: BUILD.bazel
bionorm/common/models/: __init__.py  bio_entities.py  paper.py
bionorm/common/util/: __init__.py  files.py  mesh_utils.py
bionorm/normalizers/: __init__.py
bionorm/normalizers/chemicals/SieveBased/: BUILD.bazel  README.md  __init__.py  main.py  normalizer.py
bionorm/normalizers/chemicals/SieveBased/data/: BUILD.bazel  preprocess_mesh.py
bionorm/normalizers/disease/: __init__.py
bionorm/normalizers/disease/SieveBased/: BUILD.bazel  main.py  normalizer.py
bionorm/normalizers/disease/SieveBased/data/: BUILD.bazel  compare_dicts.py  preprocess_mesh.py
bionorm/normalizers/gene/GNormPlus/: BUILD.bazel  __init__.py  config.py  main.py  normalizer.py
bionorm/normalizers/gene/GNormPlus/models/: BUILD.bazel  paper.py
bionorm/normalizers/gene/GNormPlus/processing/: BUILD.bazel  normalization.py  paper_processing.py  scoring.py  species.py
bionorm/normalizers/gene/GNormPlus/util/: BUILD.bazel  re_patterns.py  trees.py
bionorm/normalizers/gene/GNormPlus/util/tests/: BUILD.bazel  test_trees.py
bionorm/normalizers/species/DictNormalizer/: BUILD.bazel  __init__.py  main.py  normalizer.py
bionorm/normalizers/species/DictNormalizer/config/: config.py
bionorm/normalizers/species/DictNormalizer/data/: BUILD.bazel  check_dict.py  resources.bzl
common/SieveBased/: BUILD.bazel  __init__.py  normalizer.py
common/SieveBased/config/: config.py
common/SieveBased/data/: ncbi-spell-check.txt  plural_synonyms.txt  singular_synonyms.txt  stopwords.txt  suffix.txt
common/SieveBased/models/: BUILD.bazel  __init__.py  entities.py
common/SieveBased/processing/: BUILD.bazel  __init__.py  terminology.py
common/SieveBased/processing/sieves/: BUILD.bazel  __init__.py  affixation_sieve.py  base_sieve.py  entity_modifier_synonyms_sieve.py  hyphenation_sieve.py  partial_match_ncbi_sieve.py  prepositional_transform_sieve.py  sieve.py  simple_name_sieve.py  stemming_sieve.py  symbol_replacement_sieve.py
common/SieveBased/util/: BUILD.bazel  text_processor.py
common/SieveBased/util/tests/: BUILD.bazel  test_text_processor.py
common/data/: README.md
common/models/: BUILD.bazel  bio_entities.py  paper.py  util.py
common/util/: BUILD.bazel  mesh_utils.py
normalizers/chemicals/SieveBased/: BUILD.bazel  main.py  normalizer.py
normalizers/chemicals/SieveBased/data/: BUILD.bazel  preprocess_mesh.py
normalizers/disease/SieveBased/: BUILD.bazel  README.md  __init__.py  main.py  normalizer.py
normalizers/disease/SieveBased/config/: config.py
normalizers/disease/SieveBased/data/: BUILD.bazel  check_mesh.py  compare_dicts.py  preprocess_mesh.py
normalizers/disease/SieveBased/models/: BUILD.bazel  entities.py
normalizers/disease/SieveBased/processing/: BUILD.bazel  terminology.py  text_processor.py
normalizers/disease/SieveBased/processing/sieves/: BUILD.bazel  __init__.py  affixation_sieve.py  base_sieve.py  disease_modifier_synonyms_sieve.py  hyphenation_sieve.py  partial_match_ncbi_sieve.py  prepositional_transform_sieve.py  sieve.py  simple_name_sieve.py  stemming_sieve.py  symbol_replacement_sieve.py
normalizers/disease/SieveBased/processing/tests/: BUILD.bazel  test_text_processor.py
normalizers/disease/SieveBased/util/: BUILD.bazel  text_processor.py
normalizers/disease/SieveBased/util/tests/: BUILD.bazel  test_text_processor.py
normalizers/gene/: __init__.py
normalizers/gene/GNormPlus/: BUILD.bazel  README.md  __init__.py  config.py  main.py  normalizer.py
normalizers/gene/GNormPlus/data/: BUILD.bazel
normalizers/gene/GNormPlus/models/: BUILD.bazel  paper.py
normalizers/gene/GNormPlus/processing/: BUILD.bazel  __init__.py  normalization.py  paper_processing.py  scoring.py  species.py
normalizers/gene/GNormPlus/util/: __init__.py  tokens.py  trees.py
normalizers/gene/GNormPlus/util/tests/: BUILD.bazel  test_trees.py
normalizers/species/: __init__.py
normalizers/species/DictNormalizer/: BUILD.bazel  README.md  main.py  normalizer.py
normalizers/species/DictNormalizer/config/: BUILD.bazel  config.py
normalizers/species/DictNormalizer/data/: BUILD.bazel  build_dict.py
