py_library(
    name = 'SieveBased',
    srcs = glob(['*.py']),
    visibility = ['//visibility:public'],
    data = [
        '//common/SieveBased/data',
    ],
    deps = [
        '//common/SieveBased/config',
        '//common/SieveBased/processing',
        '//common/SieveBased/processing/sieves',
        '//common/SieveBased/util',
    ],
)