py_library(
    name = 'SieveBased',
    srcs = glob(['*.py']),
    visibility = ['//visibility:public'],
    data = [
        '//bionorm/common/SieveBased/data',
    ],
    deps = [
        '//bionorm/common/SieveBased/config',
        '//bionorm/common/SieveBased/processing',
        '//bionorm/common/SieveBased/processing/sieves',
        '//bionorm/common/SieveBased/util',
    ],
)