py_library(
    name = 'SieveBased',
    srcs = glob(['*.py']),
    data = [
        '//common/SieveBased/data',
        '//normalizers/chemicals/SieveBased/data',
    ],
    deps = [
        '//common/SieveBased',
        '//common/SieveBased/config',
        '//common/SieveBased/processing',
        '//common/SieveBased/processing/sieves',
        '//common/SieveBased/util',
    ],
)

py_binary(
    name = 'main',
    main = 'main.py',
    srcs = ['main.py'],
    deps = [':SieveBased'],
)