py_library(
    name = 'SieveBased',
    srcs = glob(['*.py']),
    data = [
        '//normalizers/disease/SieveBased/data',
    ],
    deps = [
        '//normalizers/disease/SieveBased/config',
        '//normalizers/disease/SieveBased/processing'
    ],
)

py_binary(
    name = 'main',
    main = 'main.py',
    srcs = ['main.py'],
    deps = [':SieveBased'],
)