py_library(
    name = 'SieveBased',
    srcs = glob(['*.py']),
    data = [
        '//normalizers/disease/SieveBased/data',
    ],
    deps = [
        '//normalizers/disease/SieveBased/config',
        '//normalizers/disease/SieveBased/processing',
        '//normalizers/disease/SieveBased/processing/sieves',
        '//normalizers/disease/SieveBased/util',
    ],
)

py_binary(
    name = 'main',
    main = 'main.py',
    srcs = ['main.py'],
    deps = [':SieveBased'],
)