py_library(
    name = 'GNormPlus',
    visibility = ['//visibility:public'],
    imports = ['../../..'],
    srcs = glob(['*.py']),
    deps = [
        '//common/models',
        '//common/util',
        '//normalizers/gene/GNormPlus/models',
        '//normalizers/gene/GNormPlus/processing',
        '//normalizers/gene/GNormPlus/util'
    ],
)

py_binary(
    name = 'main',
    main = 'main.py',
    srcs = ['main.py'],
    deps = [
        ':GNormPlus',
    ],
    data = ['//normalizers/gene/GNormPlus/data'],
)
