py_library(
    name = 'DictNormalizer',
    srcs = glob(['*.py']),
    visibility = ['//visibility:public'],
    deps = [
        '//common/models',
        '//common/util',
        '//normalizers/species/DictNormalizer/config',
    ]
)

py_binary(
    name = 'main',
    srcs = ['main.py'],
    deps = [':DictNormalizer'],
    data = ["//normalizers/species/DictNormalizer/data"]
)