load('//build:tests.bzl', 'run_pytest')

py_library(
    name = 'tests_lib',
    srcs = glob(['*.py']),
    deps = [],
)

run_pytest(
    name = 'tests',
    srcs = glob(['test_*.py']),
    deps = ['//normalizers/disease/SieveBased/processing'],
    data = ['//normalizers/disease/SieveBased/data'],
    size = 'small'
)
